test_outputs/connlist/minikube_resources_connlist_output.txt
0.0.0.0-255.255.255.255 => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
0.0.0.0-255.255.255.255 => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
0.0.0.0-255.255.255.255 => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/calico-node[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/coredns-64897985d[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/etcd-minikube[Pod] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-apiserver-minikube[Pod] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-controller-manager-minikube[Pod] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-proxy[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-scheduler-minikube[Pod] : All Connections
0.0.0.0-255.255.255.255 => kube-system/storage-provisioner[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => 0.0.0.0-255.255.255.255 : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/calico-node[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/etcd-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/kube-apiserver-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/kube-proxy[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/kube-scheduler-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-create[Job] => kube-system/storage-provisioner[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => 0.0.0.0-255.255.255.255 : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/calico-node[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/etcd-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/kube-apiserver-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/kube-proxy[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/kube-scheduler-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-admission-patch[Job] => kube-system/storage-provisioner[Pod] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/etcd-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/kube-apiserver-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/kube-proxy[DaemonSet] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/kube-scheduler-minikube[Pod] : All Connections
ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/calico-kube-controllers-8594699699[ReplicaSet] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/calico-node[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/calico-node[DaemonSet] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/calico-node[DaemonSet] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/calico-node[DaemonSet] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/coredns-64897985d[ReplicaSet] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/coredns-64897985d[ReplicaSet] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/etcd-minikube[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/etcd-minikube[Pod] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/etcd-minikube[Pod] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/etcd-minikube[Pod] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/etcd-minikube[Pod] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/kube-apiserver-minikube[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-apiserver-minikube[Pod] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/kube-apiserver-minikube[Pod] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/kube-apiserver-minikube[Pod] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/kube-apiserver-minikube[Pod] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-controller-manager-minikube[Pod] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/kube-controller-manager-minikube[Pod] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/kube-proxy[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-proxy[DaemonSet] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/kube-proxy[DaemonSet] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/kube-proxy[DaemonSet] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/kube-scheduler-minikube[Pod] : All Connections
kube-system/kube-proxy[DaemonSet] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/kube-scheduler-minikube[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-scheduler-minikube[Pod] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/kube-scheduler-minikube[Pod] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/kube-scheduler-minikube[Pod] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/kube-scheduler-minikube[Pod] => kube-system/storage-provisioner[Pod] : All Connections
kube-system/storage-provisioner[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/storage-provisioner[Pod] => ingress-nginx/ingress-nginx-admission-create[Job] : All Connections
kube-system/storage-provisioner[Pod] => ingress-nginx/ingress-nginx-admission-patch[Job] : All Connections
kube-system/storage-provisioner[Pod] => ingress-nginx/ingress-nginx-controller-6d5f55986b[ReplicaSet] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/calico-kube-controllers-8594699699[ReplicaSet] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/coredns-64897985d[ReplicaSet] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/etcd-minikube[Pod] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/kube-apiserver-minikube[Pod] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/kube-controller-manager-minikube[Pod] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/kube-proxy[DaemonSet] : All Connections
kube-system/storage-provisioner[Pod] => kube-system/kube-scheduler-minikube[Pod] : All Connections
